[gd_scene load_steps=27 format=3 uid="uid://dk8t0mgb1oyra"]

[ext_resource type="Script" path="res://Game Management/Scripts/MainMenu.gd" id="1_mtd8w"]
[ext_resource type="PackedScene" uid="uid://dg5qf8cba6ldd" path="res://Game Management/Scenes/IntroScene.tscn" id="2_7we7i"]
[ext_resource type="FontFile" uid="uid://dlulxm5dxb804" path="res://Visual Assets/Fonts/Seagram tfb.ttf" id="2_s43nk"]
[ext_resource type="PackedScene" uid="uid://ccjctttiken65" path="res://Game Management/Scenes/GameManager.tscn" id="3_b77oe"]
[ext_resource type="FontFile" uid="uid://ba0gbrsq1d1dv" path="res://Visual Assets/Fonts/OldLondon.ttf" id="3_mekxc"]
[ext_resource type="PackedScene" uid="uid://bmrv0ur1rwq74" path="res://Game Management/Scenes/ConfigMenu.tscn" id="4_d0sfs"]
[ext_resource type="PackedScene" uid="uid://dukgowli70ket" path="res://Object Scenes/Shaders/Color Rects/ChromaticAbberation.tscn" id="4_l438a"]
[ext_resource type="PackedScene" uid="uid://hjgr02ppy2rv" path="res://Object Scenes/Shaders/Color Rects/FilmGrain.tscn" id="5_qmh14"]
[ext_resource type="Script" path="res://Scripts/Components/Audio Controllers/MenuAudio.gd" id="9_yp6t8"]
[ext_resource type="AudioStream" uid="uid://wxdkvn5k7u4q" path="res://Audio/SFX/UI/Fantasy_UI (57).wav" id="10_agfws"]
[ext_resource type="AudioStream" uid="uid://05r4hhm2yxwl" path="res://Audio/SFX/UI/16461_1460643357.mp3" id="11_a608u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qj17k"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3ddhr"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="LabelSettings" id="LabelSettings_c585b"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="LabelSettings" id="LabelSettings_thvft"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="LabelSettings" id="LabelSettings_5cc11"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="LabelSettings" id="LabelSettings_kru0k"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="LabelSettings" id="LabelSettings_kamhy"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="LabelSettings" id="LabelSettings_8fvde"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="LabelSettings" id="LabelSettings_4di0p"]
font = ExtResource("2_s43nk")
font_size = 250

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6d2er"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_right = 10
border_width_bottom = 20
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdrra"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_right = 10
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlotk"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ue6f4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1kpi"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aac33"]
bg_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mtd8w")
Intro = ExtResource("2_7we7i")
MainScene = ExtResource("3_b77oe")
ConfigMenu = ExtResource("4_d0sfs")

[node name="ChromaticAbberation" parent="." instance=ExtResource("4_l438a")]
z_index = 1
layout_mode = 1
mouse_filter = 1

[node name="FilmGrain" parent="." instance=ExtResource("5_qmh14")]
z_index = 1
layout_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qj17k")

[node name="Title Container" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(850, 200)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -645.0
offset_top = 75.0
offset_right = 645.0
offset_bottom = 393.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="U" type="Label" parent="Title Container"]
layout_mode = 2
text = "U"
label_settings = SubResource("LabelSettings_3ddhr")

[node name="n" type="Label" parent="Title Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s43nk")
theme_override_font_sizes/font_size = 150
text = "n"
label_settings = SubResource("LabelSettings_c585b")

[node name="a" type="Label" parent="Title Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s43nk")
theme_override_font_sizes/font_size = 150
text = "a"
label_settings = SubResource("LabelSettings_thvft")

[node name="w" type="Label" parent="Title Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s43nk")
theme_override_font_sizes/font_size = 150
text = "w"
label_settings = SubResource("LabelSettings_5cc11")

[node name="o" type="Label" parent="Title Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s43nk")
theme_override_font_sizes/font_size = 150
text = "o"
label_settings = SubResource("LabelSettings_kru0k")

[node name="k" type="Label" parent="Title Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s43nk")
theme_override_font_sizes/font_size = 150
text = "k"
label_settings = SubResource("LabelSettings_kamhy")

[node name="e" type="Label" parent="Title Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s43nk")
theme_override_font_sizes/font_size = 150
text = "e"
label_settings = SubResource("LabelSettings_8fvde")

[node name="n2" type="Label" parent="Title Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s43nk")
theme_override_font_sizes/font_size = 150
text = "n"
label_settings = SubResource("LabelSettings_4di0p")

[node name="Button Container" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -630.0
offset_right = 250.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0

[node name="Continue" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mekxc")
theme_override_font_sizes/font_size = 125
theme_override_styles/normal = SubResource("StyleBoxFlat_6d2er")
theme_override_styles/hover = SubResource("StyleBoxFlat_cdrra")
theme_override_styles/focus = SubResource("StyleBoxFlat_mlotk")
text = "Continue"

[node name="Start" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mekxc")
theme_override_font_sizes/font_size = 125
theme_override_styles/normal = SubResource("StyleBoxFlat_6d2er")
theme_override_styles/hover = SubResource("StyleBoxFlat_cdrra")
theme_override_styles/focus = SubResource("StyleBoxFlat_ue6f4")
text = "Start"

[node name="Config" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mekxc")
theme_override_font_sizes/font_size = 125
theme_override_styles/normal = SubResource("StyleBoxFlat_6d2er")
theme_override_styles/hover = SubResource("StyleBoxFlat_cdrra")
theme_override_styles/focus = SubResource("StyleBoxFlat_g1kpi")
text = "Configure"

[node name="Quit" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mekxc")
theme_override_font_sizes/font_size = 125
theme_override_styles/normal = SubResource("StyleBoxFlat_6d2er")
theme_override_styles/hover = SubResource("StyleBoxFlat_cdrra")
theme_override_styles/focus = SubResource("StyleBoxFlat_aac33")
text = "Quit
"

[node name="version number" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = 76.0
offset_bottom = -9.0
grow_vertical = 0
text = "ver. 0.5.3 ----- Rustbelt Software est. MMXXIII"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource("9_yp6t8")
NewGameSFX = ExtResource("10_agfws")
Tick = ExtResource("11_a608u")

[connection signal="focus_entered" from="Button Container/Continue" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="mouse_entered" from="Button Container/Continue" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="focus_entered" from="Button Container/Start" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="mouse_entered" from="Button Container/Start" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="pressed" from="Button Container/Start" to="." method="NewGame"]
[connection signal="focus_entered" from="Button Container/Config" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="mouse_entered" from="Button Container/Config" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="pressed" from="Button Container/Config" to="." method="ToOptions"]
[connection signal="focus_entered" from="Button Container/Quit" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="mouse_entered" from="Button Container/Quit" to="AudioStreamPlayer" method="PlayTick"]
[connection signal="pressed" from="Button Container/Quit" to="." method="QuitGame"]
